# -demo-

./: .gitignore  README.md  index.html  package.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: cleanup.rs  main.rs  models.rs  protect.rs  scanner.rs  startup.rs  storage.rs
src/components/: DiskCard.tsx  ProgressLine.tsx  Section.tsx  ShellLayout.tsx
src/pages/: DashboardPage.tsx  DuplicatePage.tsx  JunkScanPage.tsx  LargeFilesPage.tsx  SettingsPage.tsx  StartupPage.tsx  StoragePage.tsx  ToolsPage.tsx
src/services/: tauriApi.ts
src/stores/: appStore.ts
