[package]
name = "wincleaner-pro"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
walkdir = "2"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
